# bench_ev_agg_disagg

./: .gitignore  Cargo.toml  LICENSE  pyproject.toml  readme.md
python_code/: Visualize.ipynb  __init__.py  benchmark.py  config.py  cost_ts.py  dfo.py  opt_utils.py  optimal.py  parameter_tuning.py  profile_generator.py  rep_profile.py  sensitivity.py  utils.py  virtual_battery.py
python_code/raw_python_impls/: __init__.py  dfo.py  disaggregation.py  fo.py  fo_grouping.py  rep_profile.py  uncontrolled.py  virtual_battery.py
src/: chrg_event.rs  dfo.rs  disaggregation.rs  fo.rs  fo_grouping.rs  lib.rs  uncontrolled.rs  virtual_battery.rs
